tests/build/cases/widget_new/unknown_special_value.stderr
error: unknown special value,  expected `unset!`
 --> cases/widget_new/unknown_special_value.rs:6:18
  |
6 |         margin = foo!;
  |                  ^^^
